ParamValue renamed to ParamAverage, ParamValue changed to alpha-filter based

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "paramstate.h": "c",
-        "paramlib.h": "c"
+        "paramlib.h": "c",
+        "paramaverage.h": "c"
     }
 }
